Hot fix, update spacing on image background

--- a/src/components/BackgroundImage/BackgroundImage.module.css
+++ b/src/components/BackgroundImage/BackgroundImage.module.css
@@ -1,12 +1,12 @@
 .container {
   max-width: 80%;
-  height: 92vh;
+  height: 70vh;
   margin: 0 auto 0 auto;
 }
 
 .mainImgHome {
   width: 100%;
-  height: 92vh;
+  height: 70vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
